[package]
name = "tls13"
version = "0.1.0"
edition = "2021"
rust-version = "1.78.0"

[dependencies]
aead = "0.5.2"
aes = "0.8.4"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
hex-literal = "0.4.1"
hkdf = "0.12.4"
hmac = "0.12.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
p256 = { version = "0.13.2", features = ["ecdh", "ecdsa"] }
rand = "0.8.5"
sha2 = "0.10.8"
x509-parser = { version = "0.16.0", features = ["validate", "verify"] }
